Changes relative to tre-0.14:
  * MAP has been removed.  It has been the same as MAPCAR.
  * @: The functional version deals with arrays and strings.  The
       types will be checked at run-time and cannot get mixed.
       The result type is the argument type.  (You'll get a
       string for strings.)  This version of @ is also available
       as new function DYNAMIC-MAP.
  * JS: Accidently didn't inherit base class methods when no own
        methods have been defined.
  * LML keyword attributes are translated to camel notation when
    XML or DOM nodes are being generated.
  * Empty curly braces became literal empty JSON objects.
  * JS: ROUND, FLOOR, CEILING: More accurate implementations.

Changes of tre-0.14 relative to tre-0.13:
  * Don't miss functions that need to get imported from the host
    environment anymore.
  * Only convert keywords that are keys in literal JSON objects
    to camel notation, not literal strings.

Changes of tre-0.13 relative to tre-0.12:
  * REMOVE-PROPERTY: New, non-destructive function.
  * PROPERTY-LIST has been renamed to PROPERTIES-LIST.
  * DEFCLASS fails on re-definitions or if a base class has
    not been defined.
  * FILTER functions aren't inlined anymore.  Caused nasty bugs.
  * JS: LENGTH: Works with objects.
  * JS/PHP: Curly brackets now produce real literal objects, not
            calls of MAKE-OBJECT. Keyword keys are now actually
            converted to camel notation as stated in the README.

Changes of tre-0.12 relative to tre-0.11:
  * LML2XML: Don't generate string for attribute values of NIL.
  * PHP: OBJECT-PHPARRAY, PHPARRAY-OBJECT: New functions.
  * PHP: PROPERTY-NAMES now supports native objects.
  * PHP: HASHKEYS fixed for native arrays.

Changes of tre-0.11 relative to tre-0.10:
  * Moved platform-specific functions into separate repositories
    'tre-php', 'tre-js' and 'tre-shared'.
  * Path/URI functions and READ-BINARY added to the environment.

Changes of tre-0.10 relative to tre-0.9: